# ViroGlobe

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run.py
scripts/: build_validation_targets.py  train_parameters.py
src/: __init__.py  backend.py  calibration.py  cli.py  constants.py  data.py  evaluation.py  io.py  multi_gpu.py  seed_data.py  seed_reports.py  simulation.py
